<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logischtech.mytalentapp.Login"
    android:id="@+id/fragment_childLayout"
    android:clickable="true"
    android:gravity="left"

    android:background="#EFEFEF"
    android:layout_marginTop="0dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/slogo"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/loginimg"
        android:id="@+id/loginimg"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/userfont"
android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_marginTop="285dp" android:id="@+id/textView"
        android:layout_marginLeft="33dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/Username"
        android:textSize="18dp"
        android:gravity="left"
        android:ellipsize="start"
        android:inputType="textShortMessage|textEmailAddress"
        android:maxLines="1"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:id="@+id/etusername"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/password"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:id="@+id/iconpassword"
        android:layout_marginLeft="33dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="18dp"
        android:ellipsize="start"
        android:gravity="left"

        android:layout_marginLeft="80dp"
        android:layout_marginRight="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:id="@+id/etpassword"
        />


    <Button
        android:layout_width="match_parent"
        android:background="@drawable/signupbtn"
        android:text="@string/Sign_in"
        android:stateListAnimator="@null"
        android:layout_marginTop="365dp"
        android:layout_marginLeft="40dp"
        android:textColor="#EE6940"
        android:clickable="true"
        android:id="@+id/btnsignin"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/Forgot_Password"
        android:textStyle="bold"

        android:id="@+id/forgot"
        android:clickable="true"
        android:textColorHighlight="#737280"
        android:textColor="#808080"
        android:layout_marginTop="425dp"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/No_Account"
        android:layout_marginTop="450dp"
        android:textColor="#C3C6C9"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <TextView

        android:layout_width="match_parent"
        android:id="@+id/registernow"
        android:layout_marginTop="470dp"
        android:clickable="true"
        android:text="@string/registernow"
        android:gravity="center"
        android:textColor="#EE6940"
        android:layout_height="wrap_content" />







</FrameLayout>
