<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment_c_email_validation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:gravity="left"
    android:background="#EFEFEF"

    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.logischtech.mytalentapp.Emailvalidation">
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/slogo"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:layout_width="200dp"
        android:src="@drawable/emailvalidimg"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="70dp"
        android:layout_height="150dp" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/txt_emailvalid1"
        android:layout_marginTop="240dp"
        android:textColor="#676A7E"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"

        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="@string/txt_emailvalid3"
        android:layout_marginTop="265dp"
        android:gravity="center"
        android:textColor="#676A7E"
        android:textStyle="bold"

        android:layout_height="wrap_content" />


    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/iconemail"
        android:src="@drawable/email"
        android:layout_gravity="left"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="330dp"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/ed_email"
        android:textSize="18dp"
        android:gravity="left"
        android:id="@+id/etemail"
        android:layout_marginTop="320dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="88dp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/signupbtn"
        android:text="@string/txt_send"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="40dp"
        android:textColor="#EE6940"
        android:stateListAnimator="@null"
        android:layout_marginRight="40dp"
        android:id="@+id/btnsend"
        android:layout_height="wrap_content" />



</FrameLayout>
