<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_addvoucher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:gravity="left"

    tools:context="com.logischtech.mytalentapp.Addvoucher">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/addvouchertxt"
        android:textSize="23dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#EE6940"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
       android:id="@+id/addforwhat"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/circleicon"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="-290dp"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/txt_enter_vouchercode"
        android:layout_marginLeft="70dp"
        android:id="@+id/voucher"
        android:gravity="left"
       android:layout_marginRight="30dp"
        android:layout_marginTop="190dp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/btnsubmit"
        android:textSize="18dp"
        android:background="@drawable/signupbtn"
        android:id="@+id/vochersubmit"
        android:textColor="#EE6940"
        android:stateListAnimator="@null"
        android:layout_marginTop="300dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />


</RelativeLayout>
